Fixed stretching problem on wide screens

--- a/styles.css
+++ b/styles.css
@@ -148,12 +148,14 @@ header > .header-wrap > img {
 }
 
 .sale {
-    color: #d3d3d3;
+    color: #eaeaea;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #Products {
     width: 75%;
     margin: 25px auto;
+    align-items: center;;
 }
 
 .row {
@@ -162,6 +164,19 @@ header > .header-wrap > img {
     flex-wrap: wrap;
     width: 100%;
   }
+
+@media (max-width: 800) {
+    #Products {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .row {
+        
+    }
+}
   
 .col {
     display: flex;
@@ -177,6 +192,7 @@ header > .header-wrap > img {
 
 #product img {
     height: 300px;
+    max-width: 150px;
     object-fit: cover;
     overflow: hidden;
 }
